[package]
name = "plato-ring"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Lock-free ring buffer for PLATO high-frequency sensor data"
repository = "https://github.com/SuperInstance/plato-ring"

[dependencies]
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde_json = "1"

[dev-dependencies]
serde_json = "1"

[lib]
path = "src/lib.rs"
